tests/errors/semantic/E004_mod_b.zy
# E004_mod_b {
    <# ./E004_mod_a <= a

    #> { fn_b }

    fn_b() { <~ a::fn_a() }
}
